# nexstar-hibernate-robot

./: HibernateRobot.ino  README.md  hibernateAndPowerOff.sh  nexstarRobot.py  powerOnAndWake.sh
HibernateRobot/: HibernateRobot.ino  README.md
commandBinary/src/: CMakeLists.txt  INSTALL  nxhibernate.cpp
